--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /files/Resume MCRiquelme (1).pdf
 
   - title: "Research"
-    url: /research/
+    url: /publications/
 
   - title: "Teaching"
     url: /teaching/
