--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: /publications/
 
   - title: "Teaching"
-    url: /cv/
+    url: /teaching_all/
         
 #   - title: "Blog Posts"
 #     url: /year-archive/
