--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Cristina Riquelme"
-  pronouns         : # example: "she/her"  
+  pronouns         : "she/her"  
   bio              : "Ph.D. (c) Economics"
  # location         : "Earth"
   employer         : "University of Maryland"
